Closed
Bug 1736783
Opened 4 years ago
Closed 4 years ago
[MIPS64] Implement MacroAssembler::test{Number,Boolean,String,Symbol,BigInt}Set()
Categories
(Core :: JavaScript Engine: JIT, defect)
Tracking
()
RESOLVED
FIXED
95 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox-esr91 | --- | unaffected |
| firefox93 | --- | unaffected |
| firefox94 | --- | unaffected |
| firefox95 | --- | fixed |
People
(Reporter: zhaojiazhong-hf, Assigned: zhaojiazhong-hf)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: regression)
Attachments
(1 file)
User Agent: Mozilla/5.0 (X11; Linux loongarch64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.217 Safari/537.36
Steps to reproduce:
Build js shell on mips64el machine, and run jit-tests.
Actual results:
Some tests failed due to MacroAssembler::test{Number,Boolean,String,Symbol,BigInt}Set() functions are not implemented on mips64 platform.
Expected results:
Tests pass.
| Assignee | ||
Updated•4 years ago
|
Updated•4 years ago
|
Has Regression Range: --- → yes
| Assignee | ||
Comment 1•4 years ago
|
||
Port D128077 to MIPS platform.
Updated•4 years ago
|
Assignee: nobody → zhaojiazhong-hf
Pushed by andre.bargull@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/7987e80e2d36
[MIPS] Implement `MacroAssembler::test{Number,Boolean,String,Symbol,BigInt}Set()`. r=anba
Updated•4 years ago
|
Keywords: regression
Comment 3•4 years ago
|
||
Set release status flags based on info from the regressing bug 725966
status-firefox93:
--- → unaffected
status-firefox94:
--- → unaffected
status-firefox95:
--- → affected
status-firefox-esr78:
--- → unaffected
status-firefox-esr91:
--- → unaffected
Comment 4•4 years ago
|
||
| bugherder | ||
Status: UNCONFIRMED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 95 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•