Bug 1736783 - [MIPS] Implement `MacroAssembler::test{Number,Boolean,String,Symbol,BigInt}Set()`. r=anba

Port D128077 to MIPS platform.

Differential Revision: https://phabricator.services.mozilla.com/D128989